--- a/assets/css/var.scss
+++ b/assets/css/var.scss
@@ -6,7 +6,7 @@ $black:#333;
 $gray:#969696;
 $orange:#ea6f5a;
 $red:#F56C6C;
-$yellow:#E6A23C;
+$yellow:#969696;
 $green:#67C23A;
 $blue:#409EFF;
 $border-solid:1px solid rgba($primary,.2);
